# revex

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: algorithm.rst  api.rst  conf.py  index.rst  roadmap.rst  security.rst
revex/: __init__.py  derivative.py  dfa.py  generation.py  machine.py  machine2.py  parser.py  random_generation.py  regex_grammar.py
revex/tests/: test_api.py  test_derivative.py  test_dfa.py  test_generation.py  test_grammar.py  test_machine.py  test_machine_old.py  test_parser.py
